[Coverity 1665698] Use after free in audio_output/filters.c
This could cause an immediate crash or incorrect values might be read subsequently resulting in incorrect computations.
In aout_filter_GetVout: A pointer to freed memory is dereferenced, used as a function argument, or otherwise used (CWE-416)
10. Condition vout_Request(&cfg, NULL, NULL), taking true branch.
439 if (vout_Request(&cfg, NULL, NULL)) {
440 vout_Close(vout);
441 vout = NULL;
11. freed_arg: vlc_clock_Delete frees clock.[show details]
442 vlc_clock_Delete(clock);
443 }
444
CID 1665698: (#1 of 1): Use after free (USE_AFTER_FREE)
12. use_after_free: Using freed pointer clock.
445 owner_sys->clock = clock;