audio_output: filters: fix use-after-free on vout_Request failure

If vout_Request() fails, the clock is destroyed. However, the code
continued to assign the freed clock pointer to owner_sys->clock.

This patch adds an early return on failure to prevent the use-after-free
and ensures owner_sys members are only updated on success.

Fixes #29371

Signed-off-by: Abderhman Gamal <abderhmangamal246@gmail.com>